src/main/java/com/example/demo/error/ErrorCodes.java
package com.example.demo.error;

public enum ErrorCodes {

	UNKNOWN_ERROR,
	INVALID_INPUT,
	DATA_NOTFOUND,
	APLICATION_ERROR,
	AUTHENTICATION_ERROR,
	AUTHORIZATION_ERROR
	
}
